Fix issue where prev button hover was shifting the page down on some computer screen sizes Apply the fixes to all screen sizes, not just small ones

--- a/styles/create.css
+++ b/styles/create.css
@@ -62,7 +62,7 @@ pre {
   left: 0;
 }
 
-@media only screen and (max-width: 768px) {
+/* @media only screen and (max-width: 768px) { */
   .prev-next-button span {
     font-family: Arial;
   }
@@ -92,7 +92,7 @@ pre {
   #next:hover span {
     padding-right: 0.95em;
   }
-}
+/* } */
 
 .add-object-button {
   background-color: green;
